# tiny-ssh-honeypot

./: .dockerignore  CMakeLists.txt  Dockerfile  Dockerfile.buildx  Dockerfile.libs  README.md  SECURITY.md  cmdline.c  cmdline.h  lgtm.yml  log.c  main.c  socketutils.c  socketutils.h  toolchain  utils.c  utils.h
.github/workflows/: build.yml  codeql.yml  docker-deps.yml  docker.yml  dockerhub-description.yml  static-analysis.yml
cmake/: FindLibassh.cmake  FindLibev.cmake
patches/: libassh.patch
src/: cmdline.c  globals.c  globals.h  log.c  log.h  server.c  server.h  socketutils.c  version.h.in
